--- a/compose.yaml
+++ b/compose.yaml
@@ -42,6 +42,7 @@ services:
       - db-password
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d/
     environment:
       - POSTGRES_DB=example
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
